# customer-support-demo-app

./: .dockerignore  .env.example  .firebaserc  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  deploy-backend.sh  deploy-frontend.sh  index.html  nicegui_app.py  package-lock.json  package.json  requirements.txt  server.py
android/: README.md  gradlew  settings.gradle
android/app/: build.gradle
android/gradle/: libs.versions.toml
application/: __init__.py  analyze_user_state.py  dto.py  recall_memories.py  save_conversation_memory.py
docs/plans/: 2026-02-18-ai-partner-persona-design.md  2026-02-18-ai-partner-persona.md  2026-02-18-google-auth-design.md  2026-02-18-google-auth.md  2026-02-18-hosting-design.md  2026-02-18-hosting-plan.md  2026-02-18-user-state-based-conversation-design.md  2026-02-18-user-state-based-conversation-plan.md  2026-02-19-memory-design.md  2026-02-19-memory-mcp-design.md  2026-02-19-memory-mcp.md  2026-02-19-memory.md  2026-02-20-memory-viewer-design.md  2026-02-20-memory-viewer.md
domain/: __init__.py
domain/conversation/: __init__.py  conversation.py  message.py
domain/memory/: __init__.py  emotion.py  importance.py  memory_format_service.py  memory_record.py  memory_repository.py
domain/persona/: __init__.py  persona.py  (+1 more)
infrastructure/: __init__.py  chromadb_repository.py  gemini_proxy.py  google_auth.py  vertex_ai_embedding.py
memory-mcp/: .env.example  pyproject.toml
memory-mcp/src/memory_mcp/: server.py  store.py
tests/: test_auth.py  test_memory.py  test_memory_list.py  test_memory_store.py
(+54 files in other folders)
